--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -796,6 +796,7 @@ footer {
 .optional-section {
     padding: 50px 15px;
     text-align: center;
+    background: #f2f2f5;
     border-top: 1px solid $border;
 
     h2 {
